--- a/sass/utilidades/_mixin.scss
+++ b/sass/utilidades/_mixin.scss
@@ -17,3 +17,14 @@
     justify-content: center;
 
 }
+@mixin desktop{
+    @media screen and (min-width:1024px){
+        @content;
+    }
+}
+
+@mixin tablet{
+    @media screen and (min-width:780px){
+        @content;
+    }
+}
